# gui-rs-1

./: Cargo.toml
src/: guiposition.rs  guiprocessing.rs  guiresources.rs  guiwidgets.rs  guiwindow.rs  lib.rs  shader.wgsl
src/guiprocessing/: mod.rs  state.rs  vertices.rs  window_building_utils.rs
src/guiproperties/: guicolor.rs  guiicon.rs  guipolygon.rs  guiposition.rs  guitraits.rs  mod.rs
src/guiwidgets/: guibutton.rs  guiwindow.rs  mod.rs  widget_utils.rs
