[package]
name = "gui_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"
winit = "0.26"
env_logger = "0.9"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
uuid = { version = "0.8", features = ["v4"] }
# uuid = "0.8"